<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_act_servicos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dkdaniz.elementarticonsultoria.actServicos"
    android:background="@android:color/background_light">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/detalhe_servico"
        android:layout_marginStart="22dp"
        android:layout_marginTop="34dp"
        android:id="@+id/imageView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Texto_Consultoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_alignStart="@+id/imageView3"
        android:layout_marginTop="49dp"
        android:id="@+id/txtConsultoria"
        android:textSize="@dimen/Tamanho_Servicos" />

    <TextView
        android:text="@string/servicos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtServicos"
        android:textSize="30sp"
        android:layout_above="@+id/txtConsultoria"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp" />

    <TextView
        android:text="@string/Texto_Processos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/txtConsultoria"
        android:id="@+id/txtProcessos"
        android:textSize="@dimen/Tamanho_Servicos" />

    <TextView
        android:text="@string/Texto_Acompanhamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtProcessos"
        android:layout_alignStart="@+id/txtProcessos"
        android:layout_marginTop="39dp"
        android:id="@+id/txtAcompanhamento"
        android:textSize="@dimen/Tamanho_Servicos" />
</RelativeLayout>
