<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_act_contato"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dkdaniz.elementarticonsultoria.actContato"
    android:background="@android:color/background_light">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/detalhe_contato"
        android:layout_marginStart="17dp"
        android:layout_marginTop="29dp"
        android:id="@+id/imageView4"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Contato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_toEndOf="@+id/imageView4"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="43dp"
        android:id="@+id/txtContato"
        android:textSize="@dimen/Tamanho_Servicos" />

    <TextView
        android:text="@string/Contato_Fone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtTelefone"
        android:layout_toEndOf="@+id/txtTelefone"
        android:id="@+id/txtContatoFone"
        android:paddingLeft="5dp" />

    <TextView
        android:text="Celular:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtCelular"
        android:layout_below="@+id/txtTelefone"
        android:layout_toStartOf="@+id/txtContatoFone" />

    <TextView
        android:text="@string/Contato_Celular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtCelular"
        android:layout_toEndOf="@+id/txtTelefone"
        android:id="@+id/textView9"
        android:paddingLeft="5dp" />

    <TextView
        android:text="Email:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtEmail"
        android:layout_alignBaseline="@+id/txtContatoEmail"
        android:layout_alignBottom="@+id/txtContatoEmail"
        android:layout_alignStart="@+id/imageView4"
        android:layout_marginStart="23dp" />

    <TextView
        android:text="@string/Contato_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtContatoEmail"
        android:paddingLeft="5dp"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/imageView4"
        android:layout_toEndOf="@+id/txtEmail" />

    <TextView
        android:text="Telefone:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTelefone"
        android:layout_below="@+id/txtEmail"
        android:layout_alignStart="@+id/txtEmail" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/redes_sociais"
        android:id="@+id/imageView5"
        android:layout_below="@+id/txtCelular"
        android:layout_alignEnd="@+id/txtContato"
        android:layout_marginTop="23dp" />
</RelativeLayout>
