<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_act_clientes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dkdaniz.elementarticonsultoria.actClientes"
    android:background="@android:color/background_light">

    <TextView
        android:text="@string/Clientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:id="@+id/txtClientes"
        android:textSize="30sp"
        android:layout_alignBottom="@+id/imgLogoClientes"
        android:layout_toEndOf="@+id/imgLogoClientes"
        android:textColor="@color/Cor_Clientes" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/detalhe_cliente"
        android:layout_marginStart="13dp"
        android:layout_marginTop="16dp"
        android:id="@+id/imgLogoClientes"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cliente1"
        android:layout_marginTop="55dp"
        android:id="@+id/imgLogoClienteUm"
        android:layout_below="@+id/txtClientes"
        android:layout_alignStart="@+id/imgLogoClientes"
        android:layout_marginStart="26dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cliente2"
        android:layout_marginTop="48dp"
        android:id="@+id/imgClienteDois"
        android:layout_below="@+id/txtClienteUm"
        android:layout_alignStart="@+id/imgLogoClienteUm" />

    <TextView
        android:text="@string/Cliente_Dois"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgClienteDois"
        android:layout_alignStart="@+id/txtClienteUm"
        android:id="@+id/txtClienteDois"
        android:textSize="15sp" />

    <TextView
        android:text="@string/Cliente_Um"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtClienteUm"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/imgLogoClienteUm"
        android:layout_alignEnd="@+id/txtClientes"
        android:textSize="14sp" />

</RelativeLayout>
